# RAGDemo

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  RUN_ARTIFACTS.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements-openai.txt  requirements.txt
.github/workflows/: ci.yaml
assets/corpus/exemplars/: ex_001.ir.json  ex_001.md  ex_002.md
assets/corpus/glossary/: mechanical_terms.md
assets/corpus/style_rules/: house_style.md
assets/corpus/templates/: part_description.md
assets/samples/expected/: widget_housing.md
assets/samples/nx_code/: sample_nxopen_export.py  widget_housing_request.txt
configs/: app.yaml  logging.yaml
configs/prompts/: part_description.md  repair.md  system.md
configs/prompts/output_schemas/: part_description.md
configs/retrieval/: filters.yaml  query_templates.yaml
src/nxrag/: __init__.py  cli.py  settings.py
src/nxrag/corpus/: __init__.py  chunking.py  ids.py  retrieve.py
src/nxrag/corpus/index/: build_bm25.py  build_vector.py  store.py
src/nxrag/corpus/manifest/: build.py  schema.py
src/nxrag/doc_types/: __init__.py  part_description.py
src/nxrag/inputs/: __init__.py  detect.py  nxopen_python.py
src/nxrag/ir/: __init__.py  evidence.py  extract.py  migrate.py  schema_v1.py  serialize.py
src/nxrag/llm/: client.py  rate_limit.py
src/nxrag/observability/: artifacts.py  tracing.py
src/nxrag/pipeline/: run.py
src/nxrag/prompting/: __init__.py  pack.py  sanitize.py
src/nxrag/renderers/: __init__.py  docx.py  markdown.py
src/nxrag/validate/: ir_consistency.py  require_exemplars.py  style_lint.py
tests/integration/: test_demo_pipeline.py
tools/: batch_run.py  build_indexes.py  build_manifest.py  export_run_artifacts.py
